# rtic-app-panic

./: Cargo.toml  Embed.toml  openocd.cfg
src/: main.rs
