[package]
authors = ["brain13 <13brain13@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rtic-app"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-halt = "0.2.0"
bare-metal = "1.0.0"
stm32f3xx-hal = { version = "0.6.1", features = ["rt", "stm32f303xc"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
cortex-m-rtic = "0.6.0-alpha.4"
dwt-systick-monotonic = "0.1.0-alpha.2"


# this lets you use `cargo fix`!
[[bin]]
name = "rtic-app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
